# smallcppsoft

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui  prop.cpp  prop.h  propwindow.cpp  propwindow.h  propwindow.ui
src/dbconnection/: dbconnection.cpp  dbconnection.h  dbprop.cpp  dbprop.h  proptransactionbuffer.cpp  proptransactionbuffer.h  proptransactionworker.cpp  proptransactionworker.h
